--- a/ClassCalendarMaker.Cli/ClassCalendarMaker.Cli.csproj
+++ b/ClassCalendarMaker.Cli/ClassCalendarMaker.Cli.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>disable</Nullable>
         <DebugType>embedded</DebugType>
+        <Version>1.0.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
